--- a/src/pages/googleplay-tabs/googleplay-tabs.html
+++ b/src/pages/googleplay-tabs/googleplay-tabs.html
@@ -1,5 +1,10 @@
 <ion-header>
-  <ion-navbar color="primary">
+  <ion-navbar color="primary"> 
+    <ion-buttons>
+      <button ion-button menuToggle>
+        <ion-icon name="menu"></ion-icon>
+      </button>
+    </ion-buttons>
     <ion-title>Movies</ion-title>
   </ion-navbar>
    <ion-toolbar>
